--- a/web/account.html
+++ b/web/account.html
@@ -88,7 +88,7 @@
     </div>
     <div class="buttonLogOut" style="padding: 93px; font-size: large">
         <p>Log-out
-            <a href="#">
+            <a href="/logout">
               <span class="glyphicon glyphicon-log-out"></span>
             </a>
           </p>
