--- a/web/createAccount.html
+++ b/web/createAccount.html
@@ -10,7 +10,7 @@
       </legend> 
       <form action="create" method="POST" class="form" role="form"> 
        <div class="row"> 
-       </div> <input class="form-control" name="youremail" placeholder="Email" type="email"> <input class="form-control" name="passwordNew" placeholder="Password" type="password"> 
+       </div> <input class="form-control" name="youremail" placeholder="Email" type="email" pattern="/^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$/"> <input class="form-control" name="passwordNew" placeholder="Password" type="password"> 
        <div class="row"> 
        <br> 
        <br> 
