--- a/web/changePassword.html
+++ b/web/changePassword.html
@@ -11,7 +11,7 @@
        <div class="row">
        </div>
        <input class="form-control" name="userNameChange" placeholder="Your user name" type="text">
-      <input class="form-control" name="newPassword" placeholder="New password" type="password">
+      <input class="form-control" name="newPassword" placeholder="New password" type="password" minlength="6" maxlength="10">
        <div class="row">
        <br>
        <br>
