--- a/web/createAccount.html
+++ b/web/createAccount.html
@@ -4,13 +4,14 @@
 <body>
 <div class="container"> 
     <h1 class="text-center">Create an account</h1> 
+    <h4 style="margin-left: 428px;"><a href="/" style="color: brown;">Login Now</a></h4>
     <div class="row"> 
      <div class="col-xs-12 col-sm-12 col-md-4 well well-sm col-md-offset-4"> 
       <legend><a href=""><i class="glyphicon glyphicon-globe"></i></a> Admin account
       </legend> 
       <form action="create" method="POST" class="form" role="form"> 
        <div class="row"> 
-       </div> <input class="form-control" name="youremail" placeholder="Email" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$"> <input class="form-control" name="passwordNew" placeholder="Password" type="password"> <input class="form-control" name="rePassword" placeholder="RE-Password" type="password"> 
+       </div> <input class="form-control" name="youremail" minlength="12" maxlength="30" placeholder="Email" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$" required="required"> <input class="form-control" name="passwordNew" placeholder="Password" type="password" minlength="6" maxlength="10" required="required" > <input class="form-control" name="rePassword" placeholder="RE-Password" type="password"> 
        <div class="row"> 
        <br> 
        <br> 
