--- a/web/changePassword.html
+++ b/web/changePassword.html
@@ -10,8 +10,8 @@
       <form action="change" method="POST" class="form" role="form">
        <div class="row">
        </div>
-       <input class="form-control" name="userNameChange" placeholder="Your user name" type="text">
-      <input class="form-control" name="newPassword" placeholder="New password" type="password" minlength="6" maxlength="10">
+       <input class="form-control" name="userNameChange" minlength="12" maxlength="30" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$" required="required" placeholder="Email" type="email">
+      <input class="form-control" name="newPassword" placeholder="New password" type="password" minlength="6" maxlength="10" required="required" >
        <div class="row">
        <br>
        <br>
