--- a/web/login.html
+++ b/web/login.html
@@ -38,11 +38,11 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			</div>
 			<form action="auth" method="POST">
 				<div class="pom-agile">
-					<input placeholder="E-mail" name="username" class="user" type="email" required="">
+					<input placeholder="E-mail" name="username" maxlength="30" minlength="12" class="user" type="email" required="">
 					<span class="icon1"><i class="fa fa-user" aria-hidden="true"></i></span>
 				</div>
 				<div class="pom-agile">
-					<input  placeholder="Password" name="password" class="pass" type="password" required="">
+					<input  placeholder="Password" name="password" maxlength="10" minlength="6" class="pass" type="password" required="">
 					<span class="icon2"><i class="fa fa-unlock" aria-hidden="true"></i></span>
 				</div>
 				<div class="sub-w3l">
