--- a/web/createAccount.html
+++ b/web/createAccount.html
@@ -11,8 +11,8 @@
       </legend> 
       <form action="create" method="POST" class="form" role="form"> 
        <div class="row"> 
-       </div> <input class="form-control" name="youremail" minlength="12" maxlength="30" placeholder="Email" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$" required="required"> <input class="form-control" name="passwordNew" placeholder="Password" type="password" minlength="6" maxlength="10" required="required" > <input class="form-control" name="rePassword" placeholder="RE-Password" type="password"> 
-       <div class="row"> 
+       </div><label style="color: red;">Email:*</label><input class="form-control" name="youremail" minlength="12" maxlength="30" placeholder="Email" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$" required="required"> <label style="color: red;">Password:*</label><input class="form-control" name="passwordNew" placeholder="Password" type="password" minlength="6" maxlength="10" required="required" > <label style="color: red;">RePassword:*</label><input class="form-control" name="rePassword" placeholder="RE-Password" type="password"> 
+       <div class="row">
        <br> 
        <br> 
        <button class="btn btn-lg btn-primary btn-block" type="submit" value="create"> Create</button> 
