--- a/web/statusFeedback.html
+++ b/web/statusFeedback.html
@@ -6,7 +6,7 @@
             <label for="cars">Choose a Status:</label>
             <select name="status" id="status">
                 <option value="PROCESS">PROCESS</option>
-                <option value="ACTIVE">ACTIVE</option>
+                <option value="DONE">DONE</option>
             </select>
             <input type="submit" value="Update" style="margin-left: 80px;">
           </form>
