--- a/web/updateStatus.html
+++ b/web/updateStatus.html
@@ -4,9 +4,9 @@
 <h1 style="padding-left: 560px">Update Status</h1>
         <form action="updateStatus" method="POST" style="padding-left: 500px;">
             <label for="cars">Choose a Status:</label>
-            <select name="status" id="status">
+            <select name="statusVip" id="statusVip">
                 <option value="PROCESS">PROCESS</option>
-                <option value="DONE">DONE</option>
+                <option value="ACTIVE">ACTIVE</option>
             </select>
             <input type="submit" value="Update" style="margin-left: 80px;">
           </form>
